--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "leva": "^0.9.34",
     "r3f-perf": "^7.1.2",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-pwa": "^0.14.4"
   },
   "browserslist": [
     "last 2 Chrome versions",
